# thaillm-prescreen-rulesets

./: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yaml  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: prescreen-rulesets-unittest.yml
examples/: api_walkthrough.py
inspector/: __init__.py  graph.py  loader.py  server.py
inspector/frontend/: next.config.ts  package-lock.json  package.json
inspector/frontend/src/app/: globals.css  layout.tsx  page.tsx
inspector/static/: index.html
scripts/: run_client_test.py  simulate_pipeline.py
src/prescreen_db/: README.md  __init__.py  alembic.ini  config.py  engine.py  repository.py
src/prescreen_db/migrations/: env.py
src/prescreen_db/models/: __init__.py  base.py  enums.py  session.py
src/prescreen_rulesets/: README.md  __init__.py  constants.py  engine.py  evaluator.py  interfaces.py  pipeline.py  ruleset.py
src/prescreen_rulesets/models/: __init__.py  action.py  pipeline.py  question.py  schema.py  session.py
src/prescreen_rulesets/prediction/: __init__.py  openai.py
src/prescreen_rulesets/prompt/: __init__.py  manager.py
src/prescreen_rulesets/question_generator/: __init__.py  openai.py
src/prescreen_server/: __init__.py  app.py  cleanup.py  config.py  dependencies.py  errors.py
src/prescreen_server/docs/: api-reference.md  architecture.md  authentication.md  deployment.md  environment-variables.md  error-handling.md  flow-walkthrough.md  getting-started.md  index.md
src/prescreen_server/routes/: __init__.py  admin.py  history.py  llm.py  reference.py  sessions.py  steps.py
tests/: conftest.py  test_const_yaml.py  test_deletion.py  test_demographic.py  test_engine.py  test_er.py  test_evaluator.py  test_oldcarts.py  test_opd.py  test_openai_prediction_module.py  test_openai_question_generator.py  test_past_history.py  test_personal_history.py  test_pipeline.py  test_prompt.py  test_ruleset_store.py  test_step_back.py  test_tree_walkthrough.py
tests/helpers/: loader.py  utils.py
tests/helpers/data_model/: enum.py  schema.py
v1/const/: departments.yaml  diseases.yaml  nhso_symptoms.yaml  severity_levels.yaml  underlying_diseases.yaml
v1/rules/: demographic.yaml  oldcarts.yaml  opd.yaml  past_history.yaml  personal_history.yaml
v1/rules/er/: er_adult_checklist.yaml  er_pediatric_checklist.yaml  er_symptom.yaml
(+87 files in other folders)
