[project]
name = "thaillm-prescreen-rulesets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.0.0",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "PyYAML>=6.0.2",
    "huggingface_hub>=0.25.2",
]

[project.scripts]
prescreenviz = "visualizer.server:cli"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.setuptools.package-data]
visualizer = ["static/*"]
