[project]
name = "thaillm-prescreen-rulesets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.0.0",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "PyYAML>=6.0.2",
    "huggingface_hub>=0.25.2",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "jinja2>=3.1",
]

[project.scripts]
prescreen-inspector = "inspector.server:cli"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
# inspector lives at the project root; prescreen_db and prescreen_rulesets
# live under src/, so we list packages explicitly with package-dir mappings.
packages = [
    "inspector",
    "prescreen_db",
    "prescreen_db.models",
    "prescreen_db.migrations",
    "prescreen_rulesets",
    "prescreen_rulesets.models",
    "prescreen_rulesets.prompt",
]

[tool.setuptools.package-dir]
prescreen_db = "src/prescreen_db"
"prescreen_db.models" = "src/prescreen_db/models"
"prescreen_db.migrations" = "src/prescreen_db/migrations"
prescreen_rulesets = "src/prescreen_rulesets"
"prescreen_rulesets.models" = "src/prescreen_rulesets/models"
"prescreen_rulesets.prompt" = "src/prescreen_rulesets/prompt"

[tool.setuptools.package-data]
inspector = ["static/*", "static/**/*", "frontend/out/**/*"]
"prescreen_rulesets.prompt" = ["template/*.jinja2"]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
